--- a/EjemploBasicoAL_OnPrem/.vscode/settings.json
+++ b/EjemploBasicoAL_OnPrem/.vscode/settings.json
@@ -1,42 +1,6 @@
 {
     "al.assemblyProbingPaths": [
         "./.netpackages",
-        "C:/Windows/assemby/",
-        "C:/Program Files/Microsoft Dynamics 365 Business Central/200/Service/Add-ins/"
-    ],
-    //básicas de la extensión de AL
-    "[al]": {
-        "editor.wordBasedSuggestions": true,
-        "editor.suggestSelection": "first",
-        //es para los colores 
-        "editor.bracketPairColorization.enabled": true,
-        "editor.semanticHighlighting.enabled": true
-    },
-    //Valores del analyzer, que va a tener en cuenta en lo warnigs
-    "al.codeAnalyzers": [
-        //"${AppSourceCop}", // es para saber si nuestro código subiría a app source
-        //"${PerTenantExtensionCop}", // es cuando tú haces una extensión que estará en SAS
-        "${CodeCop}", // analizador de código estándar
-        "${UICop}" //Para hacer las propiedades mínimas para ejecutar tu desarrollo.
-    ],
-    //activar el code Análisis
-    "al.enableCodeAnalysis": true,
-    "al.enableCodeActions": true,
-    //para hacer un feacth automático
-    "git.autofetch": true,
-    //eliminar al hacer fetch
-    "git.pruneOnFetch": true,
-    //no pide de nuevo las configuraciones de los commits
-    "git.enableSmartCommit": true,
-    "git.confirmSync": false,
-    //las de Waldo. Configuración de nombres de archivos y objetos
-    "CRS.ObjectNameSuffix": "",
-    //estructura para los nombres de los objetos
-    "CRS.FileNamePattern": "<ObjectNameShort>.<ObjectTypeShortPascalCase>.al",
-    "CRS.FileNamePatternExtensions": "<ObjectNameShort>.<ObjectTypeShortPascalCase>.al",
-    "CRS.FileNamePatternPageCustomizations": "<ObjectNameShort>.<ObjectTypeShortPascalCase>.al",
-    "CRS.OnSaveAlFileAction": "Rename",
-    //opción de autoformato
-    "editor.formatOnSave": true,
-    "al.ruleSetPath": "./app.ruleset.json"
+        "C:/Windows/assemby/"
+    ]
 }
